# bamboost-docs

./: .gitignore  .gitlab-ci.yml  .prettierrc  README.md  api.json  bamboost.json  bamboostAPIdoc.json  constants.ts  docusaurus.config.ts  fumapy.config.ts  generateAPIdoc.sh  global.d.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  sidebars.ts  source.config.ts  tailwind.config.js  tailwind.config.ts  theme.config.tsx  tsconfig.json
.github/workflows/: deploy.yml
app/: global.css  layout.client.tsx  layout.config.tsx  layout.tsx  not-found.tsx  provider.tsx
app/(apidocs)/: layout.tsx
app/(home)/: headline.tsx  headline_new.tsx  layout.tsx  page.tsx
app/api-tui/: layout.tsx
app/apidocs/: layout.tsx
app/docs/: layout.tsx
app/static.json/: route.ts
blog/: 2023-09-10-init.md  2023-10-19-release-0-4-0.md  2023-12-10-release-0-4-1.md  2024-01-05-release-0-4-2.md  authors.yml  release_0_11.mdx
components/: callout.tsx  collection-table.tsx  search.tsx  searchOrama.tsx
components/Callout/: index.tsx
content/: _quarto.yml
extract-docs/: autodoc_bamboost.py  create_json.py  test.ipynb  test.json  test.py
fumapy/: bamboost.json  bamboost_to_json.py  bamboostcli.json  create-source.ts  pyproject.toml  tui_to_json.py
fumapy/components/: callout.tsx
fumapy/components/Code/: index.tsx  shared.tsx
fumapy/components/Markdown/: DocstringSections.tsx  markdown.tsx
fumapy/components/SourceDocumentation/: annotation.tsx  attributes.tsx  module.tsx  types.ts
fumapy/components/SourceDocumentation/ArgumentList/: index.tsx
fumapy/components/SourceDocumentation/Classes/: MethodHeader.tsx  index.tsx  inherited.tsx  method.tsx
fumapy/components/SourceDocumentation/Function/: FunctionHeader.tsx  index.tsx
fumapy/css/: preset.css
fumapy/custom_griffe/: utils.py
fumapy/layout/: apiLayout.tsx  layout.tsx  page.tsx
fumapy/lib/: bamboost.json  createApiSource.tsx  getStructuredData.ts  source.api.ts  source.api.tsx  utils.ts
fumapy/pkg/: __init__.py
fumapy/py/: create.py
fumapy/py/mksource/: simplify_docstring.py  utils.py
fumapy/src/fumapy/: __init__.py
fumapy/src/fumapy/mksource/: json_encoder.py  simplify_docstring.py
lib/: bamboost.json  createApiSource.tsx  export-search-indexes.ts  generateBamboostApiDocs.py  getPkgJson.tsx  getStructuredData.ts  layout.shared.tsx  nb2mdx.py  source.api.tsx  source.ts  source.tsx  utils.ts  watch-notebooks.js
lib/pkg/: pyproject.toml  test.json
lib/pkg/pdoc_to_json/: __init__.py  documenters.py  models.py  utils.py
nb2mdx/: convert_all.js  dirs.js  index.js  nb2mdx.js  nb2mdx.py  nb2mdx.ts  watcher.js
pages/: _app.tsx  _meta.ts  globals.css  index.mdx
plugins/: blog-plugin.js  remark-alerts.js  remark-jupyter-admonitions.js
public/: 404.html  _redirects  index.html  reference_guide.json  search-index.json  sitemap.xml  tui-showcase.webm
scripts/: update-orama.mjs  update-orama.ts  updateSearchIndex.js  utils.ts
static/: bamboost-api-doc.json
(+628 files in other folders)
