[project]
name = "bamboost-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bamboost",
    "fumapy",
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.6",
]

[tool.uv.sources]
fumapy = { path = "fumapy", editable = true }
bamboost = { path = "../bamboost@next", editable = true }

[tool.bamboost.index]
isolated = true
