[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdoc_to_json"
version = "0.1.0"
description = "A tool to output python source documentation to JSON"
authors = [
    {name = "florez", email = "florez@ethz.ch"},
]
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pdoc",
    "docstring-parser",
]

[tool.setuptools]
packages = ["pdoc_to_json"]
